        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12778
        REGRESSION: Nightly won't load Curl plugin for full page use

        * dom/DOMImplementation.cpp:
        (WebCore::DOMImplementation::createDocument): Re-order cases to give more priority to plugins.
        This also fixes Adobe SVG Viewer and any plugins that register XML MIME types.
        Added a case for XHTML to avoid enumerating plugins.



Canonical link: https://commits.webkit.org/17327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20648 268f45cc-cd09-0410-ab3c-d52691b4dbfc